--- a/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
@@ -1,31 +1,41 @@
-<section class="mx-4 mx-lg-0" style="margin-top: 16px">
-  <div class="container cff-v2-our-community-section p-3 p-lg-5">
-    <div class="row align-items-center">
-      <div class="col-12 col-lg-5 d-flex flex-column align-items-center align-items-lg-start" style="max-width: 673px">
-        <div class="cff-v2-our-community-section-title">
-          <div class="cff-v2-our-community-section-title-text">
-            {{ 'HOME_PAGE.OUR_COMMUNITY.TITLE' | translate }}
-          </div>
-        </div>
-        <div class="cff-v2-our-community-section-description">
-          {{ 'HOME_PAGE.OUR_COMMUNITY.DESCRIPTION' | translate }}
+<div class="bg-light-900">
+  <div class="max-w-screen-xl py-24 sm:px-6 sm:py-32 lg:px-8">
+    <div
+      class="relative isolate overflow-hidden bg-secondary-900 px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
+      <svg viewBox="0 0 1024 1024"
+        class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0"
+        aria-hidden="true">
+        <circle cx="512" cy="512" r="512" fill="url(#00b428-0410-454c-8f7c-9a820de03641)" fill-opacity="0.7" />
+        <defs>
+          <radialGradient id="00b428-0410-454c-8f7c-9a820de03641">
+            <stop stop-color="#00b428" />
+            <stop offset="1" stop-color="#0e1c36" />
+          </radialGradient>
+        </defs>
+      </svg>
+      <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left">
+        <h2 class="text-3xl font-bold tracking-tight text-light-900 sm:text-4xl">{{ 'HOME_PAGE.OUR_COMMUNITY.TITLE' |
+          translate }} </h2>
+        <p class="mt-6 text-lg leading-8 text-light-600"> {{ 'HOME_PAGE.OUR_COMMUNITY.DESCRIPTION' | translate }}
+        </p>
+        <div class="mt-10 flex flex-col md:flex-row items-center justify-center gap-6 lg:justify-start">
+          <a [routerLink]="['instant-quote']"
+            class="rounded-md bg-light-900 px-3.5 py-2.5 text-sm font-semibold text-dark-900 shadow-sm hover:text-light-900 hover:bg-dark-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-light-900">{{
+            'HOME_PAGE.OUR_COMMUNITY.BUTTON_1' | translate
+            }}</a>
+          <a (click)="bookACall()"
+            class="cursor-pointer rounded-md px-3.5 py-2.5 text-sm font-semibold text-light-900 shadow-sm hover:bg-dark-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-light-900">
+            <span>{{
+              'HOME_PAGE.OUR_COMMUNITY.BUTTON_2'
+              |
+              translate }}</span>
+          </a>
         </div>
       </div>
-
-      <div class="col-12 col-lg-7 align-self-center" style="margin-bottom: 12px;">
-        <img loading="lazy" src="/assets/images/map-clutter-free-finds.svg" alt="" class="img-fluid" />
-      </div>
-    </div>
-    <div class="row">
-      <div class="d-flex flex-column flex-lg-row align-items-center" style="row-gap: 12px; column-gap:12px">
-        <a class="btn primary-btn" type="button" [routerLink]="['instant-quote']">{{
-          'HOME_PAGE.OUR_COMMUNITY.BUTTON_1' | translate
-          }}</a>
-        <a (click)="bookACall()" class="btn secondary-btn link-btn border" type="button">{{
-          'HOME_PAGE.OUR_COMMUNITY.BUTTON_2'
-          |
-          translate }}</a>
+      <div class="relative mt-16 h-80 lg:mt-8">
+        <img class="absolute top-0 w-[57rem] max-w-none rounded-md bg-light-100/5 ring-1 ring-light-900/10"
+          src="/assets/images/map-clutter-free-finds.svg" alt=" Home organizing kenya">
       </div>
     </div>
   </div>
-</section>
+</div>
