--- a/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
@@ -1,14 +1,14 @@
 <div class="bg-light-900">
   <div class="max-w-screen-xl py-24 sm:px-6 sm:py-32 lg:px-8">
     <div
-      class="relative isolate overflow-hidden bg-secondary-900 px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
+      class="relative isolate overflow-hidden bg-primary-900 px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
       <svg viewBox="0 0 1024 1024"
         class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0"
         aria-hidden="true">
-        <circle cx="512" cy="512" r="512" fill="url(#00b428-0410-454c-8f7c-9a820de03641)" fill-opacity="0.7" />
+        <circle cx="512" cy="512" r="512" fill="url(#7a23d3-0410-454c-8f7c-9a820de03641)" fill-opacity="0.7" />
         <defs>
-          <radialGradient id="00b428-0410-454c-8f7c-9a820de03641">
-            <stop stop-color="#00b428" />
+          <radialGradient id="7a23d3-0410-454c-8f7c-9a820de03641">
+            <stop stop-color="#7a23d3" />
             <stop offset="1" stop-color="#0e1c36" />
           </radialGradient>
         </defs>
