--- a/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
@@ -77,7 +77,7 @@
       </div>
     </div>
     <div
-      class="z-10 bg-gradient-to-b from-primary-100 to-primary-300 w-full h-full absolute top-0 left-0 z-0 rounded-lg border-r-2 border-r-primary-600 border-b-2 border-b-primary-600">
+      class="z-10 bg-gradient-to-b from-secondary-100/5 to-secondary-300/5 w-full h-full absolute top-0 left-0 z-0 rounded-lg border-r-2 border-r-secondary-600 border-b-2 border-b-secondary-600">
     </div>
   </div>
 </section>
