--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -50,7 +50,7 @@
                     <img loading="lazy" [src]="'assets/header/about.svg'" alt="about clutter free finds">
                   </div>
                   <div>
-                    <a [routerLink]="'/about'" class="font-semibold text-gray-900">
+                    <a [routerLink]="'/about'" (click)="toggleCustomerMegaMenu()" class=" font-semibold text-gray-900">
                       About
                       <span class="absolute inset-0"></span>
                     </a>
@@ -64,7 +64,8 @@
                     <img loading="lazy" [src]="'assets/header/how-it-works.svg'" alt="how-it-works clutter free finds">
                   </div>
                   <div>
-                    <a [routerLink]="'/how-it-works'" class="font-semibold text-gray-900">
+                    <a [routerLink]="'/how-it-works'" (click)="toggleCustomerMegaMenu()" class=" font-semibold
+                      text-gray-900">
                       How it Works
                       <span class="absolute inset-0"></span>
                     </a>
@@ -75,9 +76,9 @@
               </div>
               <div class="grid divide-x divide-dark-300 bg-dark-100">
                 <a href="https://www.youtube.com/watch?v=eZClhYwU7Qc&t=245s" target="_blank"
-                  class="flex items-center justify-start gap-x-2.5 p-4 font-semibold text-gray-900 hover:bg-gray-100">
-                  <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                  class="flex items-center justify-start gap-x-2.5 p-4 font-semibold text-dark-900 hover:bg-dark-100">
+                  <svg class="w-6 h-6 text-danger-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
+                    height="24" fill="currentColor" viewBox="0 0 24 24">
                     <path fill-rule="evenodd"
                       d="M21.7 8.037a4.26 4.26 0 0 0-.789-1.964 2.84 2.84 0 0 0-1.984-.839c-2.767-.2-6.926-.2-6.926-.2s-4.157 0-6.928.2a2.836 2.836 0 0 0-1.983.839 4.225 4.225 0 0 0-.79 1.965 30.146 30.146 0 0 0-.2 3.206v1.5a30.12 30.12 0 0 0 .2 3.206c.094.712.364 1.39.784 1.972.604.536 1.38.837 2.187.848 1.583.151 6.731.2 6.731.2s4.161 0 6.928-.2a2.844 2.844 0 0 0 1.985-.84 4.27 4.27 0 0 0 .787-1.965 30.12 30.12 0 0 0 .2-3.206v-1.516a30.672 30.672 0 0 0-.202-3.206Zm-11.692 6.554v-5.62l5.4 2.819-5.4 2.801Z"
                       clip-rule="evenodd" />
