chore: change things up and add a banner

--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
@@ -39,7 +39,7 @@
 </div>
 <div class="p-4 bg-white rounded-lg md:p-8 dark:bg-dark-600" id="stats">
   <dl
-    class="md:divide-x bg-purple  divide-dark-100 dark:divide-dark-300 grid grid-cols-1 p-4 mx-auto text-gray-900 sm:grid-cols-1 md:grid-cols-5 sm:p-8">
+    class="md:divide-x bg-purple  divide-dark-100 dark:divide-dark-300 grid grid-cols-1 gap-4 md:gap-0 p-4 mx-auto text-gray-900 sm:grid-cols-1 md:grid-cols-5 sm:p-8">
     <div class="flex flex-col items-center justify-center ">
       <dt class="mb-2 text-3xl md:text-6xl font-extrabold text-primary-900 ">+3</dt>
       <dd class="text-dark-900 dark:text-gray-400">Organized Spaces</dd>
