--- a/apps/website/mfe/src/app/app.component.html
+++ b/apps/website/mfe/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="flex flex-col">
+    <cff-app-banner></cff-app-banner>
     <cff-header></cff-header>
     <router-outlet></router-outlet>
     <clutterfreefinds-v2-footer class="bottom-0"></clutterfreefinds-v2-footer>
