--- a/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
@@ -6,10 +6,10 @@
       'HOME_PAGE.WHAT_WE_DO.GRADIENT' | translate
       }}</span>
   </div>
-  <div class="text-dark-600 text-center w-4/5 mx-auto mb-4 md:mb-9 ">
+  <div class="text-dark-600 text-center md:w-4/5 mx-auto mb-4 md:mb-9 ">
     {{ 'HOME_PAGE.WHAT_WE_DO.DESCRIPTION' | translate }}
   </div>
-  <div class="grid md:grid-cols-3 mb-8 rounded-lg">
+  <div class="grid md:grid-cols-3 mb-8 rounded-lg gap-4 md:gap-0">
     <figure *ngFor="let servie of services"
       class="flex flex-col items-center justify-center p-8 text-center rounded-lg bg-secondary-100/5 me-2">
       <figcaption class="flex items-center justify-center mb-5">
