--- a/libs/store/src/lib/landing/landing.component.html
+++ b/libs/store/src/lib/landing/landing.component.html
@@ -1,4 +1,1 @@
-<main role="main" class="d-flex flex-column container">
-    <p>store works!</p>
-
-</main>
+<cff-store-hero-shop></cff-store-hero-shop>
