--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-light border-dark-100 py-16">
+<nav class="bg-light border-dark-100 pt-16">
   <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4">
     <a [routerLink]="'/'" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img loading="lazy" src="/assets/images/logo.svg" class="h-10" alt="Clutter Free Finds Logo" />
