--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -1,5 +1,4 @@
-<footer
-    class=" text-light-900 m-0 bg-center bg-no-repeat bg-[url('/assets/images/bg/footer-bg.png')] bg-dark-900 bg-blend-multiplyy">
+<footer class=" text-light-900 m-0 bg-center bg-no-repeat bg-[url('/assets/images/bg/footer-bg.png')] bg-dark-900">
     <div class="w-full px-4 py-8 lg:p-24 overflow-y-auto ">
         <div class="grid  md:grid-cols-2 w-full mb-6 md:mb-12">
             <div class="w-full mb-6 md:mb-12">
