--- a/libs/store/src/lib/landing/components/hero-shop/hero-shop.component.html
+++ b/libs/store/src/lib/landing/components/hero-shop/hero-shop.component.html
@@ -1,17 +1,63 @@
-<div class="bg-white">
-    <div class=" ">
-        <div class="mx-auto max-w-2xl">
-            <div class="text-center">
-                <h1 class="text-4xl font-bold tracking-tight text-dark-900 sm:text-6xl">Data to enrich your online
-                    business
-                </h1>
-                <p class="mt-6 text-lg leading-8 text-gray-600">Anim aute id magna aliqua ad ad non deserunt sunt. Qui
-                    irure
-                    qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
-                <div class="mt-10 flex items-center justify-center gap-x-6">
-                    <a href="#"
-                        class="rounded-md bg-purple-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get
-                        started</a>
+<div class="bg-light-900">
+    <div class="flex gap-6 min-h-128 mx-auto">
+        <div
+            class="md:w-full bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-home.jpg')]  bg-dark-300/2 bg-blend-multiply rounded-lg">
+            <div class=" px-6 md:px-12 py-24  ">
+                <div class=" text-center md:text-left">
+                    <h1 class="uppercase text-2xl font-semibold tracking-tight text-dark-600 sm:text-6xl">Transform
+                        your
+                        space
+                        <br><span class="text-primary-900 ">Transform your life</span>
+                    </h1>
+                    <div class="mt-4 flex items-center justify-center md:justify-start">
+                        <a href="#"
+                            class="flex  items-center justify-center   gap-x-2 rounded-md bg-light-600 px-3.5 py-2.5 text-sm font-semibold text-primary-900 shadow-sm hover:bg-light-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
+                            <div>Shop Now </div>
+                            <div
+                                class="inline-flex p-1 bg-primary-100 rounded-full w-6 h-6 items-center justify-center flex-shrink-0">
+                                <svg class="w-6 h-6 text-primary-600 " aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                    viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M9 10V6a3 3 0 0 1 3-3v0a3 3 0 0 1 3 3v4m3-2 .917 11.923A1 1 0 0 1 17.92 21H6.08a1 1 0 0 1-.997-1.077L6 8h12Z" />
+                                </svg>
+                                <span class="sr-only">shopping bag</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div
+            class="md:w-96  bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-play-room-home.jpg')]  bg-dark-300/10 bg-blend-multiply rounded-lg">
+            <div class=" px-6 md:px-12 py-24  ">
+                <div class=" text-center md:text-left">
+                    <h1
+                        class="lowercase text-2xl font-light tracking-tight text-primary-900 sm:text-6xl mb-2 stroke-white">
+                        Elegant
+                    </h1>
+                    <div
+                        class="bg-tertiary-900 text-2xl font-bold tracking-tight text-light-900 sm:text-4xl px-3.5 py-2.5 w-auto">
+                        products
+                    </div>
+                    <div class="mt-4 flex items-center justify-center md:justify-start">
+                        <a href="#"
+                            class="flex  items-center justify-center   gap-x-2 rounded-md bg-light-600 px-3.5 py-2.5 text-sm font-semibold text-primary-900 shadow-sm hover:bg-light-900  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
+                            <div>Shop Now </div>
+                            <div
+                                class="inline-flex p-1 bg-primary-100 rounded-full w-6 h-6 items-center justify-center flex-shrink-0">
+                                <svg class="w-6 h-6 text-primary-600" aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                    viewBox="0 0 24 24">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M9 10V6a3 3 0 0 1 3-3v0a3 3 0 0 1 3 3v4m3-2 .917 11.923A1 1 0 0 1 17.92 21H6.08a1 1 0 0 1-.997-1.077L6 8h12Z" />
+                                </svg>
+                                <span class="sr-only">shopping bag</span>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
