--- a/libs/store/src/lib/landing/landing.component.html
+++ b/libs/store/src/lib/landing/landing.component.html
@@ -1,1 +1,6 @@
-<cff-store-hero-shop></cff-store-hero-shop>
+<div class="mx-auto max-w-screen-2xl">
+    <div class="w-full px-4 py-8 lg:p-12">
+        <cff-store-hero-shop></cff-store-hero-shop>
+
+    </div>
+</div>
