chore: skeleton for shop

--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -4,10 +4,10 @@
       <img loading="lazy" src="/assets/images/logo.svg" class="h-10" alt="Clutter Free Finds Logo" />
     </a>
     <div class="flex items-center md:order-2 space-x-1 md:space-x-0 rtl:space-x-reverse">
-      <button type="button" data-dropdown-toggle="language-dropdown-menu"
+      <a [routerLink]="['/instant-quote']" type="button" data-dropdown-toggle="language-dropdown-menu"
         class="inline-flex items-center font-medium justify-center px-4 py-2 text-sm bg-primary-900 text-light-900 rounded-lg cursor-pointer hover:bg-dark-900">
         Get started
-      </button>
+      </a>
     </div>
     <button data-collapse-toggle="mega-menu-full" type="button"
       class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-dark-600 rounded-lg md:hidden hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-dark-200"
