--- a/libs/store/src/lib/landing/components/hero-shop/hero-shop.component.html
+++ b/libs/store/src/lib/landing/components/hero-shop/hero-shop.component.html
@@ -1,17 +1,18 @@
 <div class="bg-light-900">
-    <div class="flex gap-6 min-h-128 mx-auto">
+    <div class="flex gap-6 min-h-144 mx-auto">
         <div
-            class="md:w-full bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-home.jpg')]  bg-dark-300/2 bg-blend-multiply rounded-lg">
+            class="md:w-full bg-cover bg-bottom bg-no-repeat  bg-[url('/assets/store/bg/organize-your-home.jpg')]  bg-dark-300/10 bg-blend-multiply rounded-lg">
             <div class=" px-6 md:px-12 py-24  ">
                 <div class=" text-center md:text-left">
-                    <h1 class="uppercase text-2xl font-semibold tracking-tight text-dark-600 sm:text-6xl">Transform
-                        your
-                        space
+                    <h1 class="uppercase text-2xl font-semibold tracking-tight text-dark-900 sm:text-6xl">
+                        <span class=" stroke-white ">Transform
+                            your
+                            space</span>
                         <br><span class="text-primary-900 ">Transform your life</span>
                     </h1>
                     <div class="mt-4 flex items-center justify-center md:justify-start">
                         <a href="#"
-                            class="flex  items-center justify-center   gap-x-2 rounded-md bg-light-600 px-3.5 py-2.5 text-sm font-semibold text-primary-900 shadow-sm hover:bg-light-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
+                            class="flex  items-center justify-center gap-x-2 rounded-md bg-light-900 px-3.5 py-2.5 text-sm font-semibold text-primary-900 shadow-sm hover:bg-light-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
                             <div>Shop Now </div>
                             <div
                                 class="inline-flex p-1 bg-primary-100 rounded-full w-6 h-6 items-center justify-center flex-shrink-0">
@@ -30,8 +31,8 @@
             </div>
         </div>
         <div
-            class="md:w-96  bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-play-room-home.jpg')]  bg-dark-300/10 bg-blend-multiply rounded-lg">
-            <div class=" px-6 md:px-12 py-24  ">
+            class="md:w-96  bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-play-room-home.jpg')]  bg-dark-300/15 bg-blend-multiply rounded-lg">
+            <div class=" px-2 md:px-6 py-24  ">
                 <div class=" text-center md:text-left">
                     <h1
                         class="lowercase text-2xl font-light tracking-tight text-primary-900 sm:text-6xl mb-2 stroke-white">
@@ -43,7 +44,7 @@
                     </div>
                     <div class="mt-4 flex items-center justify-center md:justify-start">
                         <a href="#"
-                            class="flex  items-center justify-center   gap-x-2 rounded-md bg-light-600 px-3.5 py-2.5 text-sm font-semibold text-primary-900 shadow-sm hover:bg-light-900  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
+                            class="flex  items-center justify-center   gap-x-2 rounded-md bg-light-900 px-3.5 py-2.5 text-sm font-semibold text-primary-900 shadow-sm hover:bg-light-900  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">
                             <div>Shop Now </div>
                             <div
                                 class="inline-flex p-1 bg-primary-100 rounded-full w-6 h-6 items-center justify-center flex-shrink-0">
