--- a/apps/website/mfe/src/app/pages/privacy-policy/sections/content-section/content-section.component.html
+++ b/apps/website/mfe/src/app/pages/privacy-policy/sections/content-section/content-section.component.html
@@ -1,39 +1,39 @@
-<div class="row privacy-policy">
+<div class="flex flex-col px-4 max-w-screen-lg mx-auto">
     <div class="content" *ngFor="let content of contentArray;">
-        <div class="pp-first-title">
+        <div class="mt-2 text-2xl font-extrabold leading-none tracking-tight text-dark-900  lg:text-4xl">
             {{ content.title| translate }}
         </div>
-        <div class="pp-description">
+        <div class="text-gray-500  leading-7">
             {{ content.description_1 | translate }}
         </div>
-        <div class="pp-list-container">
-            <ul>
-                <li class="pp-text-style" *ngFor="let bullet of content.list1;">
+        <div class="leading-7 ">
+            <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside">
+                <li *ngFor="let bullet of content.list1;">
                     {{ bullet | translate }}
                 </li>
             </ul>
         </div>
 
-        <div class="pp-description">
+        <div class="text-gray-500  leading-7">
             {{ content.description_2 | translate }}
         </div>
-        <div class="pp-description">
+        <div class="text-gray-500  leading-7">
             {{ content.description_3 | translate }}
         </div>
-        <div class="pp-description">
+        <div class="text-gray-500 leading-7 ">
             {{ content.description_4 | translate }}
         </div>
-        <div class="pp-list-container">
-            <ul>
-                <li class="pp-text-style" *ngFor="let bullet of content.list2">
+        <div class="leading-7">
+            <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside">
+                <li *ngFor="let bullet of content.list2">
                     {{ bullet | translate }}
                 </li>
             </ul>
         </div>
-        <div class="pp-list-container">
-            <ul>
+        <div class="leading-7 mb-4 ">
+            <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside">
                 <li *ngFor="let link of content.link">
-                    <a [href]=" link.ref" class=" pp-base-style">{{link.title}}</a>
+                    <a [href]=" link.ref" class="underline text-primary-900">{{link.title}}</a>
                 </li>
             </ul>
         </div>
