--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -99,8 +99,8 @@
             class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 ">Resources</a>
         </li>
         <li>
-          <a [routerLink]="'/pricing'" class=" nav-link block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent
-            md:hover:text-primary-900  md:p-0 ">Pricing</a>
+          <a [routerLink]="'/pricing'"
+            class=" nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 ">Pricing</a>
         </li>
         <li>
           <a [routerLink]="'/blog'"
