chore: service agreement page

--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -111,7 +111,7 @@
         <hr class="my-6 border-light-100 sm:mx-auto" />
         <div class="flex items-center justify-between">
             <div class="flex gap-2 mb-3 text-light-600">
-                <span><a [routerLink]="'/service-agreement py-2'" class="nav-link py-2">
+                <span><a [routerLink]="'/service-agreement'" class="nav-link py-2">
                         {{ 'FOOTER.SERVICE_AGREEMENT' | translate }}
                     </a></span>
                 <span><a [routerLink]="'/privacy-policy'" class="nav-link py-2">
