--- a/apps/website/mfe/src/app/pages/service-agreement/sections/content-section/content-section.component.html
+++ b/apps/website/mfe/src/app/pages/service-agreement/sections/content-section/content-section.component.html
@@ -1,20 +1,20 @@
-<div class="row privacy-policy">
-    <div class="content" *ngFor="let content of contentArray;">
-        <div class="pp-first-title">
+<div class="flex flex-col px-4 max-w-screen-lg mx-auto">
+    <div *ngFor="let content of contentArray;">
+        <div class="mt-2 text-2xl font-extrabold leading-none tracking-tight text-dark-900  lg:text-4xl">
             {{ content.title| translate }}
         </div>
-        <div class="pp-description">
+        <div class="text-dark-600   leading-7">
             {{ content.description_1 | translate }}
         </div>
-        <div class="pp-list-container">
-            <ul>
-                <li class="pp-text-style" *ngFor="let bullet of content.list1;">
+        <div class="leading-7 ">
+            <ul class="max-w-md space-y-1 text-dark-600  list-disc list-inside">
+                <li *ngFor="let bullet of content.list1;">
                     {{ bullet | translate }}
                 </li>
             </ul>
         </div>
 
-        <div class="pp-description">
+        <div class="text-dark-600  leading-7">
             {{ content.description_2 | translate }}
         </div>
     </div>
