chore:minify images

--- a/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
-  <div class="sm:hidden md:block">
+  <div class="sm:hidden md:flex justify-end">
     <img loading="lazy" src="/assets/images/why-clutter-free-finds.png" alt="" class="img-fluid" />
   </div>
 </section>
