--- a/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.scss
+++ b/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.scss
@@ -10,7 +10,7 @@ section {
         rgba(255, 255, 255, 0.6175) 50.5%,
         rgba(255, 255, 255, 0.855) 89.02%
       ),
-      url(/assets/images/bg/how-clutter-works.jpg) no-repeat top center;
+      url(/assets/images/bg/how-clutter-works.webp) no-repeat top center;
     padding: 40px 64px;
     border-radius: 30px;
 
