--- a/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
@@ -1,24 +1,22 @@
-<div>
-  <div class="mb-4 text-center text-3xl font-extrabold text-dark-900 lg:text-5xl">
-    <span class="d-inline-flex me-1">{{
-      'HOME_PAGE.WHAT_WE_DO.TITLE' | translate
-      }}</span><span class="text-transparent bg-clip-text bg-gradient-to-r to-secondary-900 from-primary-900">{{
-      'HOME_PAGE.WHAT_WE_DO.GRADIENT' | translate
-      }}</span>
-  </div>
-  <div class="text-dark-600 text-center md:w-4/5 mx-auto mb-4 md:mb-9 ">
-    {{ 'HOME_PAGE.WHAT_WE_DO.DESCRIPTION' | translate }}
-  </div>
-  <div class="grid md:grid-cols-3 mb-8 rounded-lg gap-4 md:gap-0">
-    <figure *ngFor="let servie of services"
-      class="flex flex-col items-center justify-center p-8 text-center rounded-lg bg-secondary-100/5 me-2">
-      <figcaption class="flex items-center justify-center mb-5">
-        <img loading="lazy" alt="clutter free finds services" class="img-fluid" [src]="servie.image" />
-      </figcaption>
-      <blockquote class="max-w-2xl mx-auto mb-4 text-dark-600 lg:mb-8 ">
-        <h3 class="text-lg font-semibold text-dark-900 md:text-2xl">{{ servie.title | translate }}</h3>
-        <p class="my-4">{{ servie.description | translate }}</p>
-      </blockquote>
-    </figure>
-  </div>
+<div class="mb-4 text-center text-3xl font-extrabold text-dark-900 lg:text-5xl">
+  <span class="d-inline-flex me-1">{{
+    'HOME_PAGE.WHAT_WE_DO.TITLE' | translate
+    }}</span><span class="text-transparent bg-clip-text bg-gradient-to-r to-secondary-900 from-primary-900">{{
+    'HOME_PAGE.WHAT_WE_DO.GRADIENT' | translate
+    }}</span>
+</div>
+<div class="text-dark-600 text-center md:w-4/5 mx-auto mb-4 md:mb-9 ">
+  {{ 'HOME_PAGE.WHAT_WE_DO.DESCRIPTION' | translate }}
+</div>
+<div class="flex flex-col md:flex-row flex-wrap justify-center mb-8 rounded-lg gap-4 md:gap-0">
+  <figure *ngFor="let servie of services"
+    class="flex flex-col items-center justify-center p-2 md:p-4 text-center rounded-lg bg-secondary-100/5 me-2 md:max-w-md">
+    <img loading="lazy" alt="clutter free finds services" [src]="servie.image" class="h-auto w-3/4" />
+    <figcaption class="flex items-center justify-center mb-5">
+    </figcaption>
+    <blockquote class="max-w-2xl mx-auto mb-4 text-dark-600 lg:mb-8 ">
+      <h3 class="text-lg font-semibold text-dark-900 md:text-2xl">{{ servie.title | translate }}</h3>
+      <p class="my-4">{{ servie.description | translate }}</p>
+    </blockquote>
+  </figure>
 </div>
