--- a/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
@@ -1,44 +1,37 @@
-<section style="margin-top: 16px">
-  <div class="container cff-v2-how-we-do-it-section p-3 p-md-5">
-    <div class="row">
-      <div class="col-12 col-lg-7 d-flex flex-column align-items-center align-items-lg-start"
-        style="margin-bottom: 24px">
-        <div class="cff-v2-how-we-do-it-section-title">
-          <div class="cff-v2-how-we-do-it-section-title-text">
-            {{ 'HOME_PAGE.HOW_WE_DO_IT.TITLE' | translate }}
-          </div>
-        </div>
-        <div class="cff-v2-how-we-do-it-section-description">
-          <span *ngFor="let description of description">
-            <span [class.bold]="description.bold">
-              {{ description.title | translate }}</span>
-          </span>
-        </div>
-        <div class="cff-v2-how-we-do-it-section-list" style="margin-bottom: 24px">
-          <ng-container *ngFor="let item of [1, 2, 3, 4, 5, 6]">
-            <div class="list-item d-flex align-items-center mb-3">
-              <div class="circle-check-purple-10 d-flex align-items-center" style="gap: 8px;">
-                <img loading="lazy" alt="clutter free finds services" src="/assets/icons/check-purple.svg" width="10" />
-              </div>
-              <span>
-                {{ 'HOME_PAGE.HOW_WE_DO_IT.LIST.ITEM' + item | translate }}
-              </span>
-            </div>
-          </ng-container>
-        </div>
-        <div class="d-flex flex-column flex-md-row align-items-center">
-          <a class="btn primary-btn" type="button" [routerLink]="['instant-quote']"> {{
-            'HOME_PAGE.HOW_WE_DO_IT.BUTTON' | translate
-            }}</a>
-        </div>
+<div class="bg-[url('/assets/images/bg/cubes.png')] bg-no-repeat bg-center p-3 p-md-5">
+  <div class="flex">
+    <div class="w-full md:w-1/2 flex flex-col items-center lg:items-start">
+      <div class="text-2xl lg:text-4xl font-extrabold mb-2 text-dark-900">
+        {{ 'HOME_PAGE.HOW_WE_DO_IT.TITLE' | translate }}
       </div>
-      <div #youtubeVideoRef class="col-12 col-lg-5 align-self-center d-flex justify-content-center">
-
-        <iframe *ngIf="isVideoVisible" loading="lazy" width="560" height="315" class="iframe img-fluid"
-          [src]="ytIframe | iframeUrl" title=" YouTube video player" frameborder="0"
-          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+      <div class="mb-4 text-sm lg:text-lg font-normal text-dark-600">
+        <span *ngFor="let description of description">
+          <span [class.font-extrabold]="description.bold">
+            {{ description.title | translate }}</span>
+        </span>
       </div>
+      <ul class="max-w-md space-y-1 text-dark-600 list-inside">
+        <li class="flex items-center" *ngFor="let item of [1, 2, 3, 4, 5, 6]">
+          <svg class="w-4 h-4 me-2  flex-shrink-0 fill-primary-100 stroke-primary-900" aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path
+              d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
+          </svg>
+          {{ 'HOME_PAGE.HOW_WE_DO_IT.LIST.ITEM' + item | translate }}
+        </li>
+      </ul>
+      <a [routerLink]="['/instant-quote']" type="button" data-dropdown-toggle="language-dropdown-menu"
+        class="my-6 inline-flex items-center font-medium justify-center px-4 py-2 text-sm bg-primary-900 text-light-900 rounded-lg cursor-pointer hover:bg-dark-900">
+        {{
+        'HOME_PAGE.HOW_WE_DO_IT.BUTTON' | translate
+        }}
+      </a>
+    </div>
+    <div #youtubeVideoRef class="w-full md:w-1/2 self-center flex justify-center">
+      <iframe *ngIf="isVideoVisible" loading="lazy" width="560" height="315" class="w-3/4 aspect-video rounded-lg"
+        [src]="ytIframe | iframeUrl" title=" YouTube video player" frameborder="0"
+        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
     </div>
   </div>
-</section>
+</div>
