--- a/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
@@ -72,7 +72,10 @@
         </div>
         <div class="flex w-full md:w-1/2 justify-end border-lg">
           <!--Add autoplay on intersection-->
-          <video class="rounded-lg" preload autoplay loop playsinline src="/assets/videos/home-organizing.webm"></video>
+          <video class="w-full h-auto max-w-full rounded-lg " controls preload loop playsinline>
+            <source src="/assets/videos/home-organizing.webm" type="video/webm">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
     </div>
