chore: complete FAQ

--- a/apps/website/mfe/src/app/pages/home-page/home-page.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/home-page.component.html
@@ -1,10 +1,10 @@
 <main role="main" class="mt-6 md:mt-10  mx-auto max-w-screen-xl p-4">
-  <!-- <cff-v2-hero></cff-v2-hero>
+  <cff-v2-hero></cff-v2-hero>
   <cff-v2-what-we-do></cff-v2-what-we-do>
   <cff-v2-why-cff></cff-v2-why-cff>
   <cff-v2-the-process></cff-v2-the-process>
   <cff-v2-our-community></cff-v2-our-community>
-  <cff-v2-how-we-do-it></cff-v2-how-we-do-it>-->
+  <cff-v2-how-we-do-it></cff-v2-how-we-do-it>
   <cff-v2-faq-section></cff-v2-faq-section>
   <!--<wc-how-it-works></wc-how-it-works> -->
 </main>
