--- a/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.html
@@ -1,24 +1,32 @@
-<section class="container-fluid mb-5">
-  <div class="cff-v2-faq-section-title text-center mb-5">
-    {{ 'FAQ.TITLE' | translate }}
-  </div>
-  <div class="accordion d-flex flex-column mx-auto" id="accordionFaq">
-    <ng-container *ngFor="let question of questions; index as index">
-      <div class="accordion-item">
-        <div class="accordion-header" [id]="'faqHeading' + (index + 1)">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            [attr.data-bs-target]="'#collapse' + (index + 1)" aria-expanded="false"
-            [attr.aria-controls]="'#collapse' + (index + 1)">
-            {{ question.question | translate }}
-          </button>
-        </div>
-        <div [id]="'collapse' + (index + 1)" class="accordion-collapse collapse"
-          [attr.aria-labelledby]="'faqHeading' + (index + 1)" data-bs-parent="#accordionFaq">
-          <div class="accordion-body">
-            {{ question.answer | translate }}
-          </div>
-        </div>
+<div class="font-semibold text-2xl lg:text-4xl text-center mb-5">
+  {{ 'FAQ.TITLE' | translate }}
+</div>
+<div id="accordion-flush" data-accordion="flush" data-accordion="collapse"
+  data-active-classes="bg-primary-600 text-light-900" data-inactive-classes="text-dark-600">
+  <div *ngFor="let question of questions; index as index">
+    <h2 [id]="'faqHeading' + (index + 1)">
+      <button type="button"
+        class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-dark-600 rounded-lg  hover:text-light-900 hover:bg-primary-900 gap-3"
+        [attr.data-accordion-target]="'#accordion-flush-body'+ (index + 1)" aria-expanded="false"
+        [attr.aria-controls]="'accordion-flush-body'+ (index + 1)">
+        <span class="flex items-center"><svg class="w-5 h-5 me-2 shrink-0" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
+              clip-rule="evenodd"></path>
+          </svg> {{ question.question | translate }}</span>
+        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M9 5 5 1 1 5" />
+        </svg>
+      </button>
+    </h2>
+    <div [id]="'accordion-flush-body'+ (index + 1)" class="hidden bg-secondary-900 rounded-lg my-2"
+      [attr.aria-labelledby]="'faqHeading' + (index + 1)">
+      <div class="p-5">
+        <p class="mb-2 text-light-900"> {{ question.answer | translate }}.</p>
       </div>
-    </ng-container>
+    </div>
   </div>
-</section>
+</div>
