chore: finish about us page

--- a/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
@@ -8,15 +8,15 @@
 <div class="text-dark-600 text-center md:w-4/5 mx-auto mb-4 md:mb-9 ">
   {{ 'HOME_PAGE.WHAT_WE_DO.DESCRIPTION' | translate }}
 </div>
-<div class="flex flex-col md:flex-row flex-wrap justify-center mb-8 rounded-lg gap-4 md:gap-0">
+<div class="grid grid-cols-1 gap-4 md:grid-cols-3 justify-center mb-8 rounded-lg ">
   <figure *ngFor="let servie of services"
-    class="flex flex-col items-center justify-center p-2 md:p-4 text-center rounded-lg bg-secondary-100/5 me-2 md:max-w-md">
+    class="flex flex-col items-center justify-center p-2 md:p-4 text-center rounded-lg bg-secondary-100/5">
     <img loading="lazy" alt="clutter free finds services" [src]="servie.image" class="h-auto w-3/4" />
-    <figcaption class="flex items-center justify-center mb-5">
-    </figcaption>
-    <blockquote class="max-w-2xl mx-auto mb-4 text-dark-600 lg:mb-8 ">
+    <figcaption class="flex items-center justify-center">
       <h3 class="text-lg font-semibold text-dark-900 md:text-2xl">{{ servie.title | translate }}</h3>
-      <p class="my-4">{{ servie.description | translate }}</p>
+    </figcaption>
+    <blockquote class="max-w-2xl mx-auto text-dark-600 ">
+      <p class="">{{ servie.description | translate }}</p>
     </blockquote>
   </figure>
 </div>
