--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -40,7 +40,7 @@
           </button>
 
           <div [@openClose]="openCloseCustomerMegaMenuTrigger"
-            class="absolute   mt-5 flex w-full md:w-screen max-w-max md:-translate-x-1/2 md:-left-1/2 px-4">
+            class="absolute z-50  mt-5 flex w-full md:w-screen max-w-max md:-translate-x-1/2 md:-left-1/2 px-4">
             <div
               class="w-screen max-w-md flex-auto overflow-hidden rounded-3xl bg-white text-sm leading-6 shadow-lg ring-1 ring-gray-900/5">
               <div class="p-4">
