--- a/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
@@ -1,45 +1,46 @@
-<section style="margin-bottom: 40px;">
-    <div class="row position-relative justify-content-center">
-        <div class="about-our-mision-title-hollow ">Our Mision</div>
-        <div class="position-absolute title-content d-flex flex-column align-items-center" style="column-gap: 24px;">
-            <div class=" about-our-mision-title">Our Mision</div>
-            <img loading="lazy" src="assets/images/mision.png" alt="" class="img-fluid" width="721">
+<div class="relative flex justify-center mb-4 lg:mb-12">
+    <div class="text-hollow bg-gradient-to-r from-primary-900 to-prmary-600 ">Our Mision</div>
+    <div class="absolute top-1/2 flex flex-col items-center">
+        <div class="text-primary-900  text-center font-medium text-2xl lg:text-5xl">Our Mision</div>
+        <img loading="lazy" src="assets/images/mision.png" alt="our organizing Mision">
+        <div class="font-medium text-dark-900 text-sm lg:text-lg">“ Create organized and functional spaces that
+            simplify
+            life"
         </div>
     </div>
-    <div class="row" style="margin-bottom: 40px;">
-        <div class="about-our-mision-venn justify-content-center d-flex">
-            <div class="about-our-mision-venn-left-circle d-flex align-items-center justify-content-center">
-                <div class="text">
-                    Empower individuals and businesses to declutter,
-                    organize, and reclaim control
-                    of their spaces
-                </div>
-            </div>
-            <div class="about-our-mision-venn-right-circle  d-flex align-items-center justify-content-center">
-                <div class="text">
-                    Fosters a sense of calm, enhances productivity, and
-                    contributes to a more
-                    fulfilling life
-                </div>
-            </div>
+</div>
+<div class="flex justify-center">
+    <div
+        class="-mr-2 p-4 h-44 w-44 border border-primary-300 bg-gradient-to-t from-primary-300 to-prmary-600 rounded-full flex items-center justify-center">
+        <div class="text-center font-medium text-dark-900 text-xs leading-5 mr-2">
+            Empower individuals and businesses to declutter,
+            organize, and reclaim control
+            of their spaces
         </div>
     </div>
-    <div class=" row d-flex align-items-center">
-        <div class="col-12 col-lg-7 d-flex align-items-start" style="column-gap: 20px;">
-            <div class="col-1 about-our-mision-divider d-flex justify-content-end"></div>
-            <div>
-                <div class="about-our-mision-content-title">Our goals</div>
-                <div class="about-our-mision-content-description">Our mission centers around empowering
-                    individuals and
-                    families to create calm, organized spaces that enhance their productivity and well-being
-                    through
-                    organized environments that are havens of peace and fostering a judgment-free approach that
-                    prioritizes clarity and client needs.</div>
-            </div>
-        </div>
-        <div class="col-lg-1"></div>
-        <div class="d-none d-md-block col-lg-3 ">
-            <img loading="lazy" src="/assets/images/our-mision.png" alt="" width="300">
+    <div
+        class="-ml-2 p-4 h-44 w-44 border border-primary-600 bg-gradient-to-r from-primary-300 to-prmary-600 rounded-full flex items-center justify-center">
+        <div class="text-center font-medium text-dark-900 text-xs leading-5 ml-2 ">
+            Fosters a sense of calm, enhances productivity, and
+            contributes to a more
+            fulfilling life
         </div>
     </div>
-</section>
+</div>
+<div class="flex items-center">
+    <div class="w-full lg:w-7/12 flex items-start gap-x-4">
+        <div class="bg-primary-900 w-2.5 h-60"></div>
+        <div>
+            <div class="text-dark-900 font-semibold 2xl lg:text-4xl mb-4 lg:mb-6">Our goals</div>
+            <div class="font-medium text-dark-900 text-sm lg:text-lg">Our mission centers around empowering
+                individuals and
+                families to create calm, organized spaces that enhance their productivity and well-being
+                through
+                organized environments that are havens of peace and fostering a judgment-free approach that
+                prioritizes clarity and client needs.</div>
+        </div>
+    </div>
+    <div class="hidden md:block w-full lg:w-5/12">
+        <img loading="lazy" src="assets/images/our-mision.png" class="w-80 ml-auto" alt="home organizing vision">
+    </div>
+</div>
