--- a/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
@@ -1,51 +1,46 @@
-<section>
-    <div class="row about-who-is-section ">
-        <div class="row d-flex align-items-end p-0 m-0">
-            <div class="col-12 col-md-12 col-lg-5 col-xl-5" style="margin-bottom: 24px;">
+<div class="flex items-end p-0 m-0">
+    <div class="w-full lg:w-1/2">
+        <div>
+            <img loading=" lazy" src="/assets/images/shapes.svg" alt="home organizing boxes" />
+        </div>
+        <div class="flex items-start gap-x-4">
+            <div class="bg-primary-900 w-1.5 h-60"></div>
+            <div class="flex flex-col gap-y-4">
+                <div class="font-semibold text-2xl lg:text-4xl mt-2 lg:mt-6">{{'ABOUT_US_PAGE.WHO_IS_SECTION.TITLE'|
+                    translate}}
+                </div>
+                <div class="text-sm lg:text-lg text-dark-600">{{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_1'|
+                    translate}}
+                </div>
+                <div class="text-sm lg:text-lg text-dark-600">
+                    {{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_2'|
+                    translate}}
+                </div>
                 <div>
-                    <img loading="lazy" src="/assets/images/shapes.svg" alt="" class="img-fluid" width="200"
-                        style="margin-bottom: 24px;" />
-                </div>
-                <div class="d-flex align-items-start" style="column-gap: 20px;">
-                    <div class="about-who-is-section-divider col-1"></div>
-                    <div>
-                        <div class="about-who-is-section-title">{{'ABOUT_US_PAGE.WHO_IS_SECTION.TITLE'| translate}}
-                        </div>
-                        <div class="about-who-is-section-description">{{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_1'|
-                            translate}}
-                        </div>
-                        <div class="about-who-is-section-description" style="margin-bottom: 24px;">
-                            {{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_2'|
-                            translate}}
-                        </div>
-                        <!-- 
-                            - the button is not clickable
-                            <a class="btn primary-btn" type="button" [routerLink]="['/how-it-works']">{{
-                            'ABOUT_US_PAGE.WHO_IS_SECTION.BUTTON' | translate
-                            }}</a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-1 col-xl-2"></div>
-            <div class="col-12 col-md-7 col-lg-6 col-xl-5 mx-auto">
-                <div id="carouselServicesIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="d-flex flex-row">
-                        <div class="carousel-inner">
-                            <div *ngFor="let item of carousel" [class.active]="item.active" class="carousel-item">
-                                <img loading="lazy" *ngFor="let img of item.images; first as isFirst; last as isLast"
-                                    [class.isFirst]="isFirst" [class.isLast]="isLast" [src]="img.image"
-                                    class="carousel-image" [alt]="img.label">
-                            </div>
-                        </div>
-                        <div class="carousel-indicators">
-                            <div *ngFor="let item of carousel; index as slide" type="button"
-                                data-bs-target="#carouselServicesIndicators" [attr.data-bs-slide-to]="slide"
-                                [class.active]="item.active" aria-current="true" [attr.aria-label]="'Slide '+(slide+1)">
-                            </div>
-                        </div>
-                    </div>
+                    <a type="button"
+                        class="inline-flex items-center font-medium justify-center px-4 py-4 text-sm bg-primary-900 text-light-900 dark:text-light-900 rounded-lg cursor-pointer hover:bg-dark-900"
+                        ng-reflect-router-link="instant-quote" [routerLink]="'/how-it-works'">{{
+                        'ABOUT_US_PAGE.WHO_IS_SECTION.BUTTON' | translate
+                        }}</a>
                 </div>
             </div>
         </div>
     </div>
-</section>
+    <div id="default-carousel" class="relative w-full lg:w-1/2" data-carousel="slide">
+        <div class="relative flex flex-colh-56 overflow-hidden rounded-lg md:h-96 lg:h-128 ">
+            <div *ngFor="let item of carousel" [class.hidden]="!item.active"
+                class="flex flex-wrap flex-end gap-4 duration-700 ease-in-out z-20" data-carousel-item>
+                <img *ngFor="let img of item.images; first as isFirst; last as isLast" [src]=" img.image"
+                    class="rounded-lg" [alt]="img.label" [class.h-60]="!isLast && !isFirst"
+                    [class.w-40-p]="!isLast && !isFirst" [class.h-40]="isLast  || isFirst"
+                    [class.w-40]="isLast || isFirst" [class.self-end]="isFirst">
+            </div>
+            <div class="carousel-indicators absolute z-30 flex flex-col top-1/3 left-3/4 space-y-3">
+                <button class="w-3 h-3 rounded-full bg-dark-100 " *ngFor="let item of carousel; index as slide"
+                    type="button" [attr.data-bs-slide-to]="slide" [class.bg-primary-900]="item.active"
+                    [attr.aria-current]="item.active" [attr.aria-label]="'Slide '+(slide+1)">
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
