how it works complete

--- a/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
+++ b/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
@@ -10,7 +10,7 @@
             }}</a>
         <a type="button" [routerLink]="['/how-it-works']"
             class="inline-flex items-center font-medium justify-center px-4 py-4 text-sm border border-light-900 text-light-900 rounded-lg cursor-pointer hover:bg-primary-900  hover:text-light-900 hover:border-primary-900">
-            {{ 'ABOUT_US_PAGE.HERO_SECTION.BUTTON_2' |
+            {{ 'HOW_IT_WORKS.BUTTON_2' |
             translate }}</a>
     </div>
 </div>
