--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.scss
@@ -1,108 +1,108 @@
-main {
-  margin: 100px 0;
-  max-width: 1200px;
-}
-.next-btn,
-.back-btn {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  color: var(--purple-100);
-  background-color: transparent;
+// main {
+//   margin: 100px 0;
+//   max-width: 1200px;
+// }
+// .next-btn,
+// .back-btn {
+//   display: flex;
+//   align-items: center;
+//   gap: 8px;
+//   color: var(--purple-100);
+//   background-color: transparent;
 
-  &.deactivated {
-    color: var(--purple-10);
-    img {
-      opacity: 0.2;
-    }
-  }
-}
+//   &.deactivated {
+//     color: var(--purple-10);
+//     img {
+//       opacity: 0.2;
+//     }
+//   }
+// }
 
-.back-btn {
-  img {
-    transform: rotate(180deg);
-  }
-}
+// .back-btn {
+//   img {
+//     transform: rotate(180deg);
+//   }
+// }
 
-.form-heading,
-.active-step,
-.disabled-step {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  @media (max-width: 575.98px) {
-    font-size: 14px;
-    justify-content: space-between;
-  }
-}
-.step-separator,
-.disabled-step {
-  @media (max-width: 575.98px) {
-    display: none;
-  }
-}
-.isActiveStep {
-  color: var(--purple-100);
-}
-.isNextStep,
-.isPreviousStep {
-  color: var(--black-30);
-}
+// .form-heading,
+// .active-step,
+// .disabled-step {
+//   font-weight: 500;
+//   font-size: 18px;
+//   line-height: 22px;
+//   @media (max-width: 575.98px) {
+//     font-size: 14px;
+//     justify-content: space-between;
+//   }
+// }
+// .step-separator,
+// .disabled-step {
+//   @media (max-width: 575.98px) {
+//     display: none;
+//   }
+// }
+// .isActiveStep {
+//   color: var(--purple-100);
+// }
+// .isNextStep,
+// .isPreviousStep {
+//   color: var(--black-30);
+// }
 
-.estimate-price {
-  font-weight: 600;
-  font-size: 42px;
-  line-height: 120%;
-  margin-bottom: 24px;
-  @media (max-width: 575px) {
-    font-size: 24px;
-    line-height: 24px;
-    margin-bottom: 12px;
-  }
-}
-.estimate-price-info {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 10px;
-  line-height: 14px;
-  color: rgba(235, 15, 38, 0.6);
-  opacity: 0.8;
-  margin-bottom: 24px;
-  @media (max-width: 575px) {
-    width: 220px;
-  }
-}
+// .estimate-price {
+//   font-weight: 600;
+//   font-size: 42px;
+//   line-height: 120%;
+//   margin-bottom: 24px;
+//   @media (max-width: 575px) {
+//     font-size: 24px;
+//     line-height: 24px;
+//     margin-bottom: 12px;
+//   }
+// }
+// .estimate-price-info {
+//   font-style: normal;
+//   font-weight: 600;
+//   font-size: 10px;
+//   line-height: 14px;
+//   color: rgba(235, 15, 38, 0.6);
+//   opacity: 0.8;
+//   margin-bottom: 24px;
+//   @media (max-width: 575px) {
+//     width: 220px;
+//   }
+// }
 
-.hours-container {
-  max-width: 119px;
-  height: fit-content;
-  flex-grow: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 8px;
-  padding: 0;
-  margin-bottom: 32px;
-}
-.hours-header,
-.houts-to {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  @media (max-width: 575px) {
-    font-size: 12px;
-    line-height: 14px;
-  }
-}
+// .hours-container {
+//   max-width: 119px;
+//   height: fit-content;
+//   flex-grow: 0;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   align-items: flex-start;
+//   gap: 8px;
+//   padding: 0;
+//   margin-bottom: 32px;
+// }
+// .hours-header,
+// .houts-to {
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 24px;
+//   @media (max-width: 575px) {
+//     font-size: 12px;
+//     line-height: 14px;
+//   }
+// }
 
-.hours-grp {
-  max-width: 119px;
-  flex-grow: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  gap: 12px;
-}
+// .hours-grp {
+//   max-width: 119px;
+//   flex-grow: 0;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+//   align-items: center;
+//   padding: 0;
+//   gap: 12px;
+// }
